@@ -1,6 +1,7 @@
 20XX-XX-XX   2.9.1:
 -------------------
-  * avoid buffer being unnecessarily initialized in `util` module
+  * avoid buffer being unnecessarily initialized with 0s in several
+    functions of the `bitarray.util` module
 
 
 2023-12-17   2.9.0:
